# solar_openEO

./: .gitignore  AGENTS.md  PROJECT_LOG.md  README.md  pyproject.toml  run_neg_export.sh
docs/: HANDOFF_2026-02-26.md  audit_30k_large_problem.csv  audit_30k_large_triage.csv  temporal_mosaic_v1.md  training_unet_stage1.md
extraction_pipeline/: __init__.py  chip_extractor.py  config.py  dataset_writer.py  export_manager.py  sampling.py  tiling.py
mosaic_module/: __init__.py  assignment.py  cloud_mask.py  diagnostics.py  io_helpers.py  main.py  resample_align.py  scene_scoring.py  segmentation.py  stitching.py
openeo_udp/: model_registry.yaml  model_registry.yaml.bak_v1
scripts/: 00_sample_negatives.py  01_sample_and_tile.py  02_launch_gee_exports.py  03_check_export_status.py  04_extract_chips.py  05_package_dataset.py  06_visualize_chips.py  07_generate_quickviews.py  08_visualize_h5_samples.py  09_test_predictions.py  10_compare_predictions.py  17_qc_quickview_montage.py  19_test_real_world_sites.py  _compress_review_gallery.py  _finish_alberta.py  analyze_abstain_fp_risk.py  analyze_large_failures.py  audit_30k_full.py  audit_50site_2024.py  auto_submit_pipeline.py  auto_wave2_monitor.py  build_diagnostics_gallery.py  build_review_html.py  build_reviewed_training_set.py  compare_audits.py  compare_filters_on_failing_sites.py  compare_realworld_50.py  compare_training_runs.py  diagnose_band_separability.py  diagnose_fp_filter_tp_loss.py  diagnose_site.py  eu_unseen30_download.py  eu_unseen30_render.py  evaluate_ensemble.py  evaluate_training_run.py  (+28 more)
(+82 files in other folders)
