[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "solar_openeo"
version = "1.0.0"
requires-python = ">=3.9"
dependencies = [
    "numpy<2",
    "h5py>=3.8",
    "pyyaml>=6.0",
    "requests>=2.28",
    "scipy>=1.10",
]

[project.optional-dependencies]
onnx-export = [
    "tensorflow>=2.15",
    "tf2onnx",
    "onnx",
    "onnxruntime",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["solar_ml*", "openeo_udp*", "extraction_pipeline*", "mosaic_module*"]
